# AgileOctopus

./: Agile_tariffs.sql  Agile_usage.sql  CMakeLists.txt  README.md  agile.tariff.c  barChart.js  getConsumption.c  getTariffs.c  getUP.c  mSqlEx.cpp  minRateWait.cpp  mqttMessage.cpp  mqttMessage.hpp  price.c  tariff-bands.c  tariff-json.c  tariff-json.sqlite3.c  tariff-minrate.c  tariff-now.c  tariffs.html  tariffs.sh  usage_price.c  usagetariff.c
